Fixed mobile layout issues

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -354,6 +354,7 @@ img {
     justify-content: center;
     background-color: rgba(1, 1, 1, 0.75);
     backdrop-filter: blur(8px);
+    z-index: 1;
   }
   .nav__list--show .active {
     border-bottom: 2px solid var(--white-color);  
@@ -1022,6 +1023,13 @@ img {
 }
 
 
+@media screen and (min-width: 340px) and (max-width: 767px) and (orientation: landscape) {
+  .flex {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 
 @media screen and (min-width: 767px) {
   .flex {
@@ -1114,9 +1122,10 @@ img {
 /* Flipcard */
 .flip-card {
   background-color: transparent;
-  width: 300px;
-  height: 300px;
-  perspective: 1000px;
+  width: min(300px, 80vw);
+  height:  min(300px, 80vw);
+  perspective: 50rem;
+  margin: 10px;
 }
 
 .flip-card__inner {
